[package]
name = "testchain"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "testchain"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
hex-literal = "0.1"
parity-codec = "3.2"
trie-root = "0.12.0"
sr-io = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
substrate-cli = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
primitives = { package = "substrate-primitives", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
substrate-executor = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
substrate-service = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
inherents = { package = "substrate-inherents", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
transaction-pool = { package = "substrate-transaction-pool", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
network = { package = "substrate-network", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
consensus = { package = "substrate-consensus-aura", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
substrate-client = {  git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
basic-authorship = { package = "substrate-basic-authorship", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
testchain-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"
