[package]
name = "testchain-runtime-wasm"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
testchain-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"testchain-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
