[package]
name = "srml-balances-ext"
version = "1.0.0"
authors = ["wuminzhe <wuminzhe@gmail.com>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
srml-support = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0', default-features = false }
system = { package = "srml-system", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0', default_features = false }
srml-balances = { package = "srml-balances", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0', default_features = false }
sr-primitives = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0', default_features = false }
rstd = { package = "sr-std", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0', default-features = false }
sudo = { package = "srml-sudo", git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0', default-features = false }

[dev-dependencies]
sr-io = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }
substrate-primitives = { git = 'https://github.com/wuminzhe/substrate.git', branch='v1.0' }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"sr-primitives/std",
  "srml-support/std",
	"system/std",
	"srml-balances/std",
	"sudo/std",
]
